Archived superinterface class cannot be accessed

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • 17
    • Affects Version/s: 17
    • Component/s: hotspot
    • b13

      $ unzip pkg.zip
      $ java -XX:ArchiveClassesAtExit=foo.jsa -cp pkg.jar pkg.Foo
      $ java -XX:SharedArchiveFile=foo.jsa -cp pkg.jar pkg.Foo Baz
      pkg.Bar
      Exception in thread "main" java.lang.IllegalAccessError: class pkg.Baz cannot access its superinterface pkg.Bar (pkg.Baz and pkg.Bar are in unnamed module of loader 'app')
      at java.base/java.lang.ClassLoader.defineClass1(Native Method)
      at java.base/java.lang.ClassLoader.defineClass(ClassLoader.java:1010)
      at java.base/java.security.SecureClassLoader.defineClass(SecureClassLoader.java:150)

      The bug seems to happen after JDK-8249262

            Assignee:
            Calvin Cheung (Inactive)
            Reporter:
            Ioi Lam
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: