8261532: Archived superinterface class cannot be accessed

Reviewed-by: minqi, iklam